[gd_scene load_steps=2 format=3 uid="uid://bqxh2yvkqm8yo"]

[ext_resource type="Script" uid="uid://dw505ymlf8wcq" path="res://scripts/main.gd" id="1_main"]

[node name="Main" type="Node2D"]
script = ExtResource("1_main")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(400, 300)

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScoreLabel" type="Label" parent="UI/HUD"]
layout_mode = 0
offset_left = 10.0
offset_top = 10.0
offset_right = 200.0
offset_bottom = 40.0
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_font_sizes/font_size = 24
text = "SCORE: 0"

[node name="HighScoreLabel" type="Label" parent="UI/HUD"]
layout_mode = 0
offset_left = 10.0
offset_top = 40.0
offset_right = 200.0
offset_bottom = 70.0
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_font_sizes/font_size = 20
text = "HIGH: 0"

[node name="HPLabel" type="Label" parent="UI/HUD"]
layout_mode = 0
offset_left = 10.0
offset_top = 70.0
offset_right = 200.0
offset_bottom = 100.0
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 20
text = "HP: 100"

[node name="WaveLabel" type="Label" parent="UI/HUD"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -100.0
offset_top = 10.0
offset_right = 100.0
offset_bottom = 50.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 1, 1, 1)
theme_override_font_sizes/font_size = 28
text = "WAVE 1"
horizontal_alignment = 1

[node name="GameOver" type="Label" parent="UI"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -50.0
offset_right = 200.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 48
text = "GAME OVER
Press R to Restart"
horizontal_alignment = 1
vertical_alignment = 1
